<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings used as titles of Activities or Fragments. -->
    <string name="app_name">Project Manager</string>
    <string name="action_settings">Settings</string>
    
    <string name="new_project">New Project</string>
    <string name="project">Project</string>
    <string name="new_milestone">New Milestone</string>
    <string name="milestone">Milestone</string>
    <string name="new_task">New Task</string>
    <string name="task">Task</string>
    <string name="title_section1">Menu</string>
    <string name="title_section2">Current Projects</string>
    <string name="title_section3">History</string>
    <string name="title_section4">Description</string>
    <string name="title_section5">Info</string>
    
    <!-- Strings for activity com.example.projectmanager.MainActivity. -->
    <string name="menu_title">Main Menu</string>
    <string name="ic_yellow">Yellow icon</string>
    
    <string name="new_button">Create new Project</string>
    <string name="clear_history_button">Clear History</string>
    <string name="clear_current_button">Clear Current Projects</string>
    <string name="rate_app_button">Rate my App!</string>

    <string name="delete_icon">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    
    <string-array name="desription_content">
        <item>The main objective of Project Manager App is to help you (and your team) manage your projects.</item>
        <item>It is designed for small and uncommercial enterprises.</item>
        <item>Intentionally, this app was created to help fellow programmers deal with the \'messy\' part of creating a software (that is the management part).</item>
        <item>However, it can obviously be used to help manage other kinds of projects that require proper planning and systematic supervision - it\'s completely up to you.</item>
        <item>Here are some guidelines, that will tell you how to use Project Manager, by describing all the important components:</item>
    </string-array>
    <string-array name="desription_content_guidelines">
        <item>Project Manager introduces a clearly defined outline of a project. Namely, a Project consists of Milestones (these represents substantial fragments of the Project that are somehow distinctive from the rest) and the Milestones consist of Tasks - integral, short and relatively simple \'pieces of the puzzle\' that is a Project:)</item>
        <item>You can assign a priority to your Tasks, where 100 means the lowest priority and 1 stands for the highest priority possible. If you don\'t provide value for priority, it will be automatically set to 50, so don\'t be surprised.</item>
        <item>Marking your project as \'Done\' does not move it from \'Current Projects\' to \'History\' - you have to click the \'Move to History\' button to make it happen (it allows you to move to \'History\' projects that are not marked as \'Done\', but you decided that you won\'t work on them anymore for some reason).</item>
        <item>Attributes like phase, priority or dates are here to help you, but if you don\'t need them, then just ignore them.</item>
    </string-array>
    
    <string-array name="info_content">
        <item>As you can see in Description section, I created this App mostly for programmers to help them work on small projects.</item>
        <item>As a matter of fact, the idea for this app (and the will to write it) came to me while working on some other project, that took me quite a lot of time and some of it could be spared, if I had a similar organizing app.</item>
        <item>I am aware of the fact that this app isn\'t perfect and doesn\'t necessarily offer the appropriate tools for your particular project.</item>
        <item>If you don\'t like it, simlpy don\'t use it - I am sure you can find another app on the market that will suit your needs.</item>
        <item>And if you like Project Manager, then please rate it on the Play Market - it will take only a few seconds of your time - a few seconds that can really help me promote my app.</item>
        <item>Additionally, I would like to ask you for some feedback (positive or negative) - comments what you like and dislike about my app, what you would like to change or add - that kind of stuff. Please, bear in mind that this is my first Android app, so don\'t be very harsh on me :)</item>
        <item>You can reach me by e-mail: tomasz.jurkowski.inf@gmail.com or t.jurkowski@students.mimuw.edu.pl &#8230;\n</item>
        <item>&#8230; or you can find me on Linkedin: http://www.linkedin.com/pub/tomasz-jurkowski/79/79b/6b6 .</item>
        <item>I hope you will enjoy using Project Manager!</item>
    </string-array>

    <!-- Colors. -->
    <color name="pale_blue">#33b5e5</color>
    <color name="blue">#0099cc</color>
    <color name="pale_yellow">#ffbb33</color>
    <color name="yellow">#ff8800</color>
    <color name="white">#ffffff</color>
    <color name="black">#000000</color>
    <color name="transparent">#000099cc</color>
    <color name="semi_transparent">#30ffffff</color>
    <color name="semi_transparent_dark">#ddffffff</color>
    
    
    <!-- Strings for activities NewProjectActivity, NewMilestoneActivity. -->
    <string name="new_project_name">Project Name:</string>
    <string name="new_description">Description:</string>
    <string name="new_start_date">Start Date:</string>
    <string name="new_end_date">End Date:</string>
    <string name="new_project_phase">Phase of the Project:</string>
    <string name="new_milestone_name">Milestone Name:</string>
    <string name="new_milestone_phase">Phase of the Milestone:</string>
    <string name="new_task_name">Task Name:</string>
    <string name="new_task_phase">Phase of the Task:</string>
    <string name="new_task_priority">Priority:</string>
    <string name="new_task_est_time">Estimated time (hours):</string>
    
    <string name="phase_prompt">Choose the phase of your Project</string>
    <string-array name="phases">
        <item>To Do</item>
        <item>In Progress</item>
        <item>Suspended</item>
        <item>Tested</item>
        <item>Done</item>
    </string-array>
    
    <string name="correct_dates">New project has been created.\nYou can find it in \'Current Project\' panel.</string>
    <string name="incorrect_dates">The start date of the project cannot be subsequent to the end date of your project. Fix that to create you project.</string>
	<string name="equal_dates">The start date is the same as the end date. Are you sure you can finish your project in one day?</string>
    <string name="correct_dates_m">New milestone has been created.</string>
    <string name="incorrect_dates_m">The start date of the milestone cannot be subsequent to the end date of your milestone. Fix that to create this milestone.</string>
	<string name="equal_dates_m">The start date is the same as the end date. Are you sure you can finish that milestone in one day?</string>
    <string name="date_out_of_range_m">The milestone\'s start and end dates shouldn\'t go beyond the project\'s boundaries.</string>
    <string name="correct_dates_t">New task has been created.</string>
    <string name="incorrect_dates_t">The start date of the task cannot be subsequent to the end date of your task. Fix that to create this task.</string>
	<string name="equal_dates_t">The start date is the same as the end date. Are you sure you can finish that task in one day?</string>
    <string name="date_out_of_range_t">The task\'s start and end dates shouldn\'t go beyond the milestone\'s boundaries.</string>
    <string name="negative_est_time">Estimated time cannot be a negative number - pick a positive number for this field.</string>
    
    
	<string name="ok">OK</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	
	<!-- Strings for activities ProjectActivity, MilestoneActivity, NewMilestoneActivity. -->
	<string name="move_to_history_button">Move to History</string>
	<string name="add_milestone_button">New Milestone</string>
	<string name="add_task_button">New Task</string>
    <string name="add_milestone_btn">Add Milestone</string>
    <string name="add_task_btn">Add Task</string>
    <string name="delete_project_button">Delete Project</string>
    <string name="delete_milestone_button">Delete Milestone</string>
	
	<string name="db_error">Database Error - please report this issue.</string>
	<string name="project_moved_to_history">Your project has been moved to History.</string>
	<string name="project_deleted">Your project has been deleted.</string>
	<string name="milestone_deleted">Milestone has been deleted.</string>
	
	
</resources>
