<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin_30"
    android:paddingLeft="@dimen/margin_150"
    android:paddingRight="@dimen/margin_150"
    android:paddingTop="@dimen/margin_30"
    android:background="@color/transparent"
    tools:context=".MainActivity$DummySectionFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
	    android:paddingLeft="16dp"
	    android:paddingRight="16dp"
	    android:orientation="vertical" >
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/title_section1" />
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/title_section2" />
	    <EditText
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:gravity="top"
	        android:hint="@string/title_section3" />
	    <Button
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:text="@string/title_section4" />
	</LinearLayout>
    
</RelativeLayout>
