<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_50"
    android:background="@drawable/popup_round" >

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
			android:textColor="@color/yellow"
			android:paddingBottom="@dimen/margin_50"
			android:textSize="35sp"
			android:text="@string/equal_dates_m" />
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
			<Button
				android:id="@+id/yes"
			    android:layout_weight="1"
				style="@style/ButtonText"
	        	android:background="@drawable/btn_yellow"
				android:text="@string/yes" />
			<Button
   				android:id="@+id/no"
			    android:layout_weight="1"
				style="@style/ButtonText"
	        	android:background="@drawable/btn_yellow"
				android:text="@string/no" />
		</LinearLayout>

</LinearLayout>